# sidekick-agent-hub

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README-SERVER.md  README-VSCODE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  mkdocs.yml  start-server.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  (+3 more)
docs/: changelog.md  contributing.md  index.md
scripts/: build-all.sh  bump-version.sh  format-all.sh  format-check-all.sh  lint-all.sh
sidekick-cli/: CHANGELOG.md  README.md  esbuild-sea.cjs  esbuild.cjs  eslint.config.js  package-lock.json  package.json  sea-config.json  tsconfig.json
sidekick-server/: README.md  config.py  main.py  pyproject.toml  pytest.ini  requirements.txt
sidekick-server/models/: request.py  response.py
sidekick-server/prompts/: modify_system.md  modify_user.md  system.md  user.md
sidekick-server/routers/: completion.py
sidekick-server/services/: claude_client.py  completion.py  modification.py
sidekick-server/tests/: conftest.py  test_cache.py  test_completion.py  test_integration.py  test_metrics.py  test_rate_limiter.py  test_validation.py
sidekick-server/utils/: cache.py  logger.py  metrics.py  prompts.py  rate_limiter.py
sidekick-shared/: CHANGELOG.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
sidekick-vscode/: .vscodeignore  CHANGELOG.md  README.md  esbuild.js  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.js  vitest.config.js.map  vitest.config.ts
(+481 files in other folders)
