[project]
name = "sidekick-server"
version = "0.2.0"
description = "Sidekick for Max - AI-powered code completion server using Claude Code CLI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Cesar Andres Lopez", email = "cesarandreslopez@gmail.com"}]
keywords = ["claude", "ai", "code-completion", "anthropic", "copilot"]

[project.urls]
Homepage = "https://github.com/cesarandreslopez/sidekick-for-claude-max"
Repository = "https://github.com/cesarandreslopez/sidekick-for-claude-max"
Issues = "https://github.com/cesarandreslopez/sidekick-for-claude-max/issues"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "claude-agent-sdk>=0.2.2",
    "anyio>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["."]
